--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ import { Image } from "astro:assets";
 			<Image src={Norteks} alt="" />
 		</a>
 		<div class="-links">
-			<a href="/collection" class="-link">Коллекции</a>
+			<a href="/textile" class="-link">Коллекции</a>
 			<a href="/cleaning" class="-link">Как очистить ткань</a>
 			<a href="/furniture" class="-link">Фурнитура</a>
 			<a href="/blog" class="-link">Блог</a>
