--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -29,6 +29,13 @@ import Footer from "../components/Footer.astro";
 		margin: 0;
 		font-family: Arial, sans-serif;
 		/* font-family: "Open Sans", sans-serif; */
+		a:hover,
+		a:visited,
+		a:link,
+		a:active {
+			text-decoration: none;
+			color: inherit;
+		}
 	}
 	#main {
 		display: flex;
