--- a/src/main.css
+++ b/src/main.css
@@ -16,7 +16,7 @@
 .product-list {
 	display: grid;
 	width:100%;
-	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
 	gap: 20px;
 	@media (max-width: 768px) {
 		grid-template-columns: 1fr 1fr;
@@ -67,6 +67,10 @@
 		grid-template-columns: 1fr 1fr;
 	}
 	.-item {
+		a {
+			color: #0f0f0f;
+			text-decoration: none;
+		}
 		.-img {
 			width: 100%;
 			height: auto;
@@ -85,5 +89,17 @@
 }
 
 .post {
-
+	.-title {
+		text-decoration: none;
+		font-size: 32px;
+		font-weight: 700;
+	}
+	.-text {
+		font-size: 18px;
+	}
+}
+.post-image {
+	width: 100%;
+	height: 600px;
+	object-fit: cover;
 }
