added product page

--- a/src/pages/cleaning.astro
+++ b/src/pages/cleaning.astro
@@ -10,9 +10,9 @@ import "../main.css";
 
 <BaseLayout>
 	<div class="img-container">
-		<Image src={img1}  class="-img" alt="" />
-		<Image src={img2}  class="-img" alt="" />
 		<Image src={img3}  class="-img" alt="" />
+		<Image src={img2}  class="-img" alt="" />
+		<Image src={img1}  class="-img" alt="" />
 	</div>
 	<div class="container offset">
 		<div>
@@ -216,12 +216,12 @@ import "../main.css";
 
 <style scoped>
 .img-container {
-	width: 105%;
+	width: 110%;
 	display: flex;
 	justify-content: space-between;
-	margin-bottom: 20px;
+	margin: 20px 0;
 	.-img {
-		max-height: 320px;
+		max-height: 18vw;
 		width: auto;
 	}
 }
