added titles and description

--- a/src/main.css
+++ b/src/main.css
@@ -13,11 +13,25 @@
 	}
 }
 
+.title {
+	font-size: 42px;
+	font-weight: 700;
+	&.s { font-size: 32px;}
+}
+
+.text {
+	font-size: 28px;
+	font-weight: 500;
+	&.s { font-size: 24px;}
+	margin-top: 5px;
+}
+
 .product-list {
 	display: grid;
 	width:100%;
 	grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
 	gap: 20px;
+	margin-top: 20px;
 	@media (max-width: 768px) {
 		grid-template-columns: 1fr 1fr;
 	}
@@ -89,6 +103,7 @@
 }
 
 .post {
+	padding: 20px;
 	.-title {
 		text-decoration: none;
 		font-size: 32px;
