--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import MobileMenu from "../components/MobileMenu.astro";
 ---
 
 <html lang="ru">
@@ -14,6 +15,7 @@ import Footer from "../components/Footer.astro";
 			<article id="content">
 				<slot />
 			</article>
+			<MobileMenu />
 			<Footer />
 		</div>
 	</body>
