--- a/src/main.css
+++ b/src/main.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	max-width: 1700px;
-	width: 95%;
+	width: 90%;
 	padding: 25px 20px;
 	
 	&.offset {
@@ -35,6 +35,7 @@
 	@media (max-width: 768px) {
 		grid-template-columns: 1fr 1fr;
 	}
+
 	&.collection {
 		/* grid-template-columns: repeat(auto-fill, minmax(380px, 1fr)); */
 		grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -48,6 +49,11 @@
 		transition: 250ms;
 		overflow: hidden;
 		object-fit: contain;
+		&.skeleton {
+			background: #e2e2e2;
+			width: 1fr;
+			height: 380px;
+		}
 
 		.-img {
 			width: 100%;
