--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,10 +1,61 @@
 ---
+import { client, getImageUrl } from "../lib/pocketbase";
 import BaseLayout from "../layouts/BaseLayout.astro";
-import BlogList from "../components/BlogList.jsx";
+import "../main.css";
+
+const urlSearchParams = new URLSearchParams(Astro.request.url.split("?")[1]);
+const params = Object.fromEntries(urlSearchParams.entries());
+console.log("params", params);
+
+let items = [];
+let error = null;
+let loading = true;
+
+try {
+	const res = await client.collection("blog").getFullList(50, {
+		fields: "id, collectionId, image, path, title, description:excerpt(200, true)",
+	});
+	items = res;
+	loading = false;
+} catch (err) {
+	console.error("Error fetching items:", err);
+	error = err;
+	loading = false;
+}
 ---
 
 <BaseLayout>
 	<div class="container">
-		<BlogList client:only />
+		<div class="blog">
+			{
+				error ? (
+					<p>Error loading items: {error.message}</p>
+				) : loading ? (
+					[...Array(5)].map(() => (
+						<div class="-item">
+							<div class="skeleton skeleton-img" />
+							<div class="skeleton skeleton-title" />
+							<div class="skeleton skeleton-description" />
+						</div>
+					))
+				) : (
+					items.map((item) => (
+						<a href={`/post?name=${item.path}`}>
+							<div class="-item">
+								<img
+									src={getImageUrl(item)}
+									class="-img"
+									alt={item.title}
+								/>
+								<div class="-title">{item.title}</div>
+								<div class="-description">
+									{item.description}
+								</div>
+							</div>
+						</a>
+					))
+				)
+			}
+		</div>
 	</div>
 </BaseLayout>
