--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,58 +23,59 @@ import { Image } from "astro:assets";
 </footer>
 
 <style>
-.footer {
-	background: #363636;
-	min-height: 120px;
-	width: 1fr;
-	padding: 20px 100px;
-	border: 0;
-	color: #fff;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	gap: 20px;
-	margin-top: 20px;
-	flex-wrap: wrap;
-	@media (max-width: 1600px) {
-		padding: 20px 10px;
-	}
-	.-text {
+	.footer {
+		background: #363636;
+		min-height: 120px;
+		width: 1fr;
+		padding: 20px 100px;
+		border: 0;
 		color: #fff;
-		font-size: 16px;
-		&.s {
-			font-size: 14px;
-		}
-		&.m {
-			font-size: 18px;
-		}
-		&.l {
-			font-size: 20px;
-		}
-	}
-	.-logo {
-		width: 160px;
 		display: flex;
-		flex-direction: column;
-		gap: 12px;
-		.-img {
-			width: 100%;
-			height: auto;
-		}
-	}
-	.-email {
-		display: flex;
-		gap: 12px;
-	}
-	.-phone {
-		display: flex;
+		align-items: center;
+		justify-content: space-between;
 		gap: 20px;
-		flex-direction: column;
+		margin-top: 20px;
+		flex-wrap: wrap;
+		@media (max-width: 700px) {
+			padding: 20px 20px 80px 20px;
+		}
+
+		.-text {
+			color: #fff;
+			font-size: 16px;
+			&.s {
+				font-size: 14px;
+			}
+			&.m {
+				font-size: 18px;
+			}
+			&.l {
+				font-size: 20px;
+			}
+		}
+		.-logo {
+			width: 160px;
+			display: flex;
+			flex-direction: column;
+			gap: 12px;
+			.-img {
+				width: 100%;
+				height: auto;
+			}
+		}
+		.-email {
+			display: flex;
+			gap: 12px;
+		}
+		.-phone {
+			display: flex;
+			gap: 20px;
+			flex-direction: column;
+		}
+		.-address {
+			display: flex;
+			gap: 6px;
+			flex-direction: column;
+		}
 	}
-	.-address {
-		display: flex;
-		gap: 6px;
-		flex-direction: column;
-	}
-}
 </style>
