--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -16,7 +16,7 @@ import { Image } from "astro:assets";
 		z-index: 10;
 		position: fixed;
 		bottom: 0;
-		background: #363636;
+		background: #2f2f2f;
 		width: 100vw;
 		border: 0;
 		min-height: 50px;
