--- a/src/main.css
+++ b/src/main.css
@@ -52,13 +52,15 @@
 		&.skeleton {
 			background: #e2e2e2;
 			width: 1fr;
-			height: 380px;
+			height: auto;
+			aspect-ratio: 4/3;
 		}
 
 		.-img {
 			width: 100%;
 			height: auto;
 			object-fit: cover;
+			aspect-ratio: 4/3;
 		}
 
 		.-text {
