--- a/src/pages/furniture.astro
+++ b/src/pages/furniture.astro
@@ -7,7 +7,7 @@ import "../main.css";
 
 <BaseLayout>
 	<div class="container">
-		<div>asdasd</div>
+		<div>Furniture</div>
 	</div>
 </BaseLayout>
 
