changed to static

--- a/src/pages/cleaning.astro
+++ b/src/pages/cleaning.astro
@@ -10,12 +10,12 @@ import "../main.css";
 
 <BaseLayout>
 	<div class="img-container">
-		<Image src={img3}  class="-img" alt="" />
-		<Image src={img2}  class="-img" alt="" />
-		<Image src={img1}  class="-img" alt="" />
+		<Image src={img3} class="-img" alt="" />
+		<Image src={img2} class="-img" alt="" />
+		<Image src={img1} class="-img" alt="" />
 	</div>
 	<div class="container offset">
-		<div>
+		<div class="-text">
 			Выбирая ткань для своей мягкой мебели, покупателю необходимо
 			обратить внимание на то в каких обстоятельствах будет
 			эксплуатироваться изделие: наличие в доме животных, маленьких детей,
@@ -25,7 +25,7 @@ import "../main.css";
 			устойчивость к когтям животных, из натуральных или химических
 			волокон и т.д.
 		</div>
-		<div>
+		<div class="-text">
 			Исходя из этого для ухода за тканями существует достаточное
 			количество различных по составу чистящих средств. Современные
 			мебельные ткани, как правило содержащие в своём составе различные
@@ -37,19 +37,19 @@ import "../main.css";
 			применением химических веществ разрушающих структуру ткани.
 		</div>
 
-		<div>
+		<div class="-text">
 			Если же Вам всё-таки понадобилась чистка-уход за вашими изделиями,
 			то рекомендуем Вам следующее:
 		</div>
 
-		<div>РЕКОМЕНДАЦИЯ ПО ЧИСТКЕ И ЭКСПЛУАТАЦИИ ИЗДЕЛИЙ</div>
+		<div class="-text">РЕКОМЕНДАЦИЯ ПО ЧИСТКЕ И ЭКСПЛУАТАЦИИ ИЗДЕЛИЙ</div>
 
-		<div>
+		<div class="-text">
 			- Если Вам необходимо очистить изделие от бытовой пыли и сухих
 			частей, используйте сухую мягкую щётку.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Категорически запрещается использовать пылесос и другие вакуумные
 			устройства для чистки мягкой мебели. Вакуум способен вытягивать
 			волокна ткани и «валять» поверхность. То есть на поверхности ткани
@@ -60,29 +60,29 @@ import "../main.css";
 			отслоение уточного слоя от основы в некоторых видах ткани.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Строго запрещается использование отбеливателей, бензина, ацетона,
 			уайт-спирита, растворителей, абразивных кислотосодержащих чистящих
 			средств бытовой химии.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Запрещается использовать для чистки скребки, острые предметы,
 			губки с жёстким шершавым покрытием.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Не рекомендуется размещать на мягкой мебели чехлы, покрывала из
 			жёсткой ткани. Их жёсткая тыльная сторона может повредить лицевую
 			сторону обивочной ткани.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Запрещается проводить по поверхности ткани острыми (режущими)
 			предметами.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Очищать поверхность следует сразу после появления загрязнения.
 			Если это жидкость, то необходимо собрать жидкость с помощью сухой,
 			хорошо впитывающей жидкость мягкой тканью или губкой. Затем слегка
@@ -94,30 +94,30 @@ import "../main.css";
 			прежний вид и направленность.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Если источником загрязнения являются пасты (кетчуп, соус,
 			йогурт...), то сначала необходимо собрать их с поверхности мягкой
 			тряпкой без усилий, чтобы не загнать их в структуру ткани. Далее
 			предлагаем повторить процедуру по удалению жидкостей.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Не рекомендуется замывать загрязненный участок большим количеством
 			воды, во избежание повреждения наполнителей и образования разводов
 			на ткани.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Рекомендуется избегать попадания влаги и грязи на стыки и швы
 			деталей, внутренние участки изделия.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Большинство производителей тканей рекомендуют для чистки
 			пользоваться услугами профессиональной СУХОЙ чистки.
 		</div>
 
-		<div>
+		<div class="-text">
 			Для чистки небольших поверхностей рекомендуем использовать
 			СПЕЦИАЛЬНЫЕ средства для чистки мебельных тканей (для различных по
 			составу тканей - различные составы) путём нанесения на пятно и
@@ -127,78 +127,78 @@ import "../main.css";
 			участке изделия.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Некоторые ткани допускают стирку. Стирка должна производиться при
 			температуре до 30*С без или с применением моющего средства, не
 			содержащего отбеливатели. Не допускать отжим или выкручивание
 			выстиранных деталей.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Сушка должна производиться при комнатной температуре без
 			воздействия прямых солнечных лучей.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Гладить ткань допускается с изнаночной стороны утюгом с
 			температурой обозначенной одной точкой. Некоторые ткани допускают
 			температуру с двумя точками.
 		</div>
 
-		<div>
+		<div class="-text">
 			- К Вашему сведению информируем, что постиранные детали могут иметь
 			более светлый оттенок, чем до стирки и иметь усадку в размере 2-4%.
 		</div>
 
-		<div>
+		<div class="-text">
 			Все съёмные чехлы имеющие липучку должны при стирке получить защиту
 			липучей поверхности, во избежание повреждения лицевой поверхности
 			ткани.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Но большинство рекомендаций относятся к СУХОЙ профессиональной
 			чистке как самой эффективной и безопасной.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Ткани велюровые, из синели, петельного прядения более деликатны,
 			но и более подвержены загрязнению, благодаря своей глубокой
 			структуре, по сравнению с гладко- или коротковорсовыми тканями из
 			химических волокон.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Не рекомендуется размещать предметы мягкой мебели рядом с
 			отопительными приборами, рядом с мокрыми стенами, под прямым
 			воздействием солнечных лучей во избежание изменения цвета тканей.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Возникновение небольшого пилинга является естественным эффектом от
 			использования изделия из тканей и полностью устранить не
 			представляется возможным. Процесс удаления пилинга аналогичен
 			принципу для обработки верхней одежды.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Возникновение незначительной волнистости на поверхности сидений
 			является естественным эффектом растяжения тканей под воздействием
 			тяжести тела, и не рассматривается как дефект.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Компания «Нортекс» не несет ответственности за ущерб, возникший в
 			результате неправильного использования и ухода за предлагаемыми
 			обивочными тканями.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Материалы, содержащие сильные красящие пигменты, могут красить,
 			особенно в начальной фазе их использования (джинс, печать и т.п.).
 		</div>
 
-		<div>
+		<div class="-text">
 			- Компания «Нортекс» не несёт ответственности за неправильно
 			выбранный вид пошива ткани, модели мебельного чехла не
 			соответствующую техническим характеристикам ткани. Перед началом
@@ -206,7 +206,7 @@ import "../main.css";
 			нитку, иглу.
 		</div>
 
-		<div>
+		<div class="-text">
 			- Компания «Нортекс» рада оказать Вам техническую поддержку и
 			предоставить рекомендации и инструкции производителей о порядке и
 			области применения тканей, предлагаемых нами.
@@ -215,15 +215,20 @@ import "../main.css";
 </BaseLayout>
 
 <style scoped>
-.img-container {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	margin: 20px 0;
-	.-img {
-		max-height: 18vw;
-		width: auto;
+	.-text {
+		font-size: 14px;
+		@media (max-width: 700px) {
+			font-size: 12px;
+		}
 	}
-}
-
+	.img-container {
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
+		margin: 20px 0;
+		.-img {
+			max-height: 18vw;
+			width: auto;
+		}
+	}
 </style>
