--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,8 @@ import Categories from "../components/Categories.jsx";
 import { Image } from "astro:assets";
 import "../main.css";
 import Norteks from "../assets/img/logo.svg";
+import EmailForm from "../components/EmailForm";
+import EmailBox from "../components/EmailBox.astro";
 ---
 
 <BaseLayout>
@@ -39,6 +41,7 @@ import Norteks from "../assets/img/logo.svg";
 		<!-- <div>{resultList}</div> -->
 		<Categories client:only />
 	</div>
+	<EmailBox />
 </BaseLayout>
 
 <style scoped>
