--- a/src/main.css
+++ b/src/main.css
@@ -79,6 +79,28 @@
 		}
 	}
 }
+.email-form {
+	display: flex;
+	flex-direction: column;
+	gap:36px;
+	width: 520px;
+	.-input {
+		padding: 0 36px;
+		border: 1px solid #d1d1d1;
+		background: #ffffff;
+		border-radius: 3px;
+		height: 50px;
+	}
+	.-button {
+		height: 50px;
+		background: #fc7604;
+		font-weight: 400;
+		font-size: 24px;
+		color: #fff;
+		border: 0;
+	}
+
+}
 
 .blog {
 	display: grid;
