--- a/src/pages/furniture.astro
+++ b/src/pages/furniture.astro
@@ -1,14 +1,47 @@
 ---
+import { client, getImageUrl } from "../lib/pocketbase";
 import BaseLayout from "../layouts/BaseLayout.astro";
-import HomeImage from "../assets/img/homeImage.jpg";
-import { Image } from "astro:assets";
 import "../main.css";
+
+const urlSearchParams = new URLSearchParams(Astro.request.url.split("?")[1]);
+const params = Object.fromEntries(urlSearchParams.entries());
+console.log("params", params);
+
+let items = [];
+let error = null;
+let loading = true;
+
+try {
+	const res = await client.collection("furniture").getFullList(50, {
+		fields: "id, collectionId, name, image, height, title, color, material:excerpt(200, true)",
+	});
+	items = res;
+	loading = false;
+} catch (err) {
+	console.error("Error fetching items:", err);
+	error = err;
+	loading = false;
+}
 ---
 
 <BaseLayout>
 	<div class="container">
-		<div>Furniture</div>
+		<div class="blog">
+			{
+				items.map((item) => (
+					<div class="-item">
+						<img
+							src={getImageUrl(item)}
+							class="-img"
+							alt={item.title}
+						/>
+						<div class="-title">{item.name}</div>
+						<div class="-description">Высота: {item.height}</div>
+						<div class="-description">Материал: {item.material}</div>
+						<div class="-description">Цвет: {item.color}</div>
+					</div>
+				))
+			}
+		</div>
 	</div>
 </BaseLayout>
-
-<style scoped></style>
