Removed EmailBox from home

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import EmailBox from "../components/EmailBox.astro";
 		<!-- <div>{resultList}</div> -->
 		<Categories client:only />
 	</div>
-	<EmailBox />
+	<!-- <EmailBox /> -->
 </BaseLayout>
 
 <style scoped>
