--- a/src/main.css
+++ b/src/main.css
@@ -29,10 +29,10 @@
 .product-list {
 	display: grid;
 	width:100%;
-	grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
+	grid-template-columns: 1fr 1fr 1fr;
 	gap: 20px;
 	margin-top: 20px;
-	@media (max-width: 768px) {
+	@media (max-width: 1024px) {
 		grid-template-columns: 1fr 1fr;
 	}
 
