--- a/src/main.css
+++ b/src/main.css
@@ -106,7 +106,7 @@
 	display: grid;
 	width: 100%;
 	gap: 20px;
-	grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+	grid-template-columns: 1fr 1fr 1fr;
 	@media (max-width: 768px) {
 		grid-template-columns: 1fr 1fr;
 	}
