--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,7 +27,7 @@ import { Image } from "astro:assets";
 		<div class="-contacts">
 			<div class="-text">Дмитровское шоссе 71Б 7ONE</div>
 			<div class="-text">+7 (495) 221-33 - 16</div>
-			<div class="-text">+7 (495) 221-33 - 16</div>
+			<div class="-text">+7 (903) 797 - 55 - 76</div>
 		</div>
 	</div>
 </nav>
