--- a/src/main.css
+++ b/src/main.css
@@ -4,11 +4,13 @@
 	max-width: 1700px;
 	width: 90%;
 	padding: 25px 20px;
-	
+	@media (max-width: 1024px) {
+		padding: 16px 20px;
+	}
 	&.offset {
-		gap: 25px;
+		gap: 16px;
 		@media (max-width: 768px) {
-			gap: 20px;
+			gap: 12px;
 		}
 	}
 }
