--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import EmailBox from "../components/EmailBox.astro";
 			<button class="-button">Оставить заявку</button>
 		</div>
 	</div>
-	<div class="container offset">
+	<div class="container">
 		<div class="text xl">
 			НОРТЕКС - ЭТО СОВРЕМЕННАЯ КОМПАНИЯ, ОСНОВНОЙ ДЕЯТЕЛЬНОСТЬЮ КОТОРОЙ
 			ЯВЛЯЕТСЯ ПРОДАЖА МЕБЕЛЬНЫХ ТКАНЕЙ ОТ ВЕДУЩИХ МИРОВЫХ ПРОИЗВОДИТЕЛЕЙ.
@@ -72,7 +72,7 @@ import EmailBox from "../components/EmailBox.astro";
 	.-container {
 		display: flex;
 		flex-direction: column;
-		gap: 32px;
+		gap: 24px;
 		margin-left: 60px;
 		max-width: 800px;
 		@media (max-width: 768px) {
