--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -32,8 +32,7 @@ const currentPath = Astro.url.pathname;
 			<a
 				href="/blog"
 				class={currentPath === "/blog" ? "-link active" : "-link "}
-				>Блог</a
-			>
+				>Блог</a>
 		</div>
 	</div>
 	<div class="-container">
