--- a/src/main.css
+++ b/src/main.css
@@ -107,10 +107,13 @@
 .blog {
 	display: grid;
 	width: 100%;
-	gap: 20px;
+	gap: 30px;
 	grid-template-columns: 1fr 1fr 1fr;
 	@media (max-width: 768px) {
 		grid-template-columns: 1fr 1fr;
+	}
+	&.furniture {
+		grid-template-columns: 1fr 1fr 1fr 1fr;
 	}
 	.-item {
 		a {
@@ -120,6 +123,11 @@
 		.-img {
 			width: 100%;
 			height: auto;
+			aspect-ratio: 7/4;
+			object-fit: cover;
+			&.furniture {
+				aspect-ratio: 1/1;
+			}
 		}
 		.-title {
 			font-size: 24px;
