--- a/src/main.css
+++ b/src/main.css
@@ -114,6 +114,9 @@
 	}
 	&.furniture {
 		grid-template-columns: 1fr 1fr 1fr 1fr;
+		@media (max-width: 768px) {
+				grid-template-columns: 1fr 1fr;
+			}
 	}
 	.-item {
 		a {
