--- a/src/main.css
+++ b/src/main.css
@@ -112,12 +112,6 @@
 	@media (max-width: 768px) {
 		grid-template-columns: 1fr 1fr;
 	}
-	&.furniture {
-		grid-template-columns: 1fr 1fr 1fr 1fr;
-		@media (max-width: 768px) {
-				grid-template-columns: 1fr 1fr;
-			}
-	}
 	.-item {
 		a {
 			color: #0f0f0f;
@@ -141,6 +135,54 @@
 			font-size: 16px;
 			font-weight: 500;
 			margin-top: 6px;
+		}
+	}
+}
+
+.furniture {
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	display: grid;
+	width: 100%;
+	gap: 30px;
+	@media (max-width: 768px) {
+		grid-template-columns: 1fr 1fr;
+	}
+	.-item {
+		&.skeleton {
+			background: #e2e2e2;
+			width: 1fr;
+			height: auto;
+			aspect-ratio: 7/5;
+		}
+		a {
+			color: #0f0f0f;
+			text-decoration: none;
+		}
+
+		.-img {
+			width: 100%;
+			height: auto;
+			aspect-ratio: 7/5;
+			object-fit: cover;
+
+			&.furniture {
+				aspect-ratio: 1/1;
+			}
+		}
+
+		.-title {
+			font-size: 22px;
+			font-weight: 700;
+			margin-top: 12px;
+		}
+
+		.-description {
+			font-size: 14px;
+			font-weight: 500;
+			margin-top: 6px;
+			@media (max-width: 768px) {
+				font-size: 12px;
+			}
 		}
 	}
 }
