--- a/src/main.css
+++ b/src/main.css
@@ -19,14 +19,20 @@
 .title {
 	font-size: 42px;
 	font-weight: 700;
+	@media (max-width: 1024px) {
+		font-size: 36px;
+	}
 	&.s { font-size: 32px;}
 }
 
 .text {
 	font-size: 28px;
 	font-weight: 500;
-	&.s { font-size: 24px;}
 	margin-top: 5px;
+	@media (max-width: 1024px) {
+		font-size: 16px;
+	}
+	&.s { font-size: 24px;}
 }
 
 .skeleton {
