--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,6 +6,7 @@ import whatsapp from "../assets/img/icons/whatsapp.svg";
 import { Image } from "astro:assets";
 
 const currentPath = Astro.url.pathname;
+console.log(currentPath)
 ---
 
 <nav class="header">
@@ -13,6 +14,7 @@ const currentPath = Astro.url.pathname;
 		<a href="/" class="-link">
 			<Image src={Norteks} alt="" />
 		</a>
+		{currentPath}
 		<div class="-links">
 			<a
 				href="/textile"
