--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -1,14 +1,32 @@
 ---
 import Norteks from "../assets/img/logo.svg";
 import { Image } from "astro:assets";
+const currentPath = Astro.url.pathname;
+
 ---
 
 <nav class="mobile-menu">
 	<div class="-wrapper">
-		<a href="/textile" class="-link">Коллекции</a>
-		<a href="/cleaning" class="-link">Как очистить ткань</a>
-		<a href="/furniture" class="-link">Фурнитура</a>
-		<a href="/blog" class="-link">Блог</a>
+		<a
+		href="/textile"
+		class={currentPath === "/textile/" ? "-link active" : "-link "}
+		>Коллекции</a
+	>
+	<a
+		href="/cleaning"
+		class={currentPath === "/cleaning/" ? "-link active" : "-link "}
+		>Как очистить ткань</a
+	>
+	<a
+		href="/furniture"
+		class={currentPath === "/furniture/" ? "-link active" : "-link "}
+		>Фурнитура</a
+	>
+	<a
+		href="/blog"
+		class={currentPath === "/blog/" ? "-link active" : "-link "}
+		>Блог</a
+	>
 	</div>
 </nav>
 <style>
@@ -41,6 +59,9 @@ import { Image } from "astro:assets";
 			font-size: 12px;
 			text-decoration: none;
 			&:hover {
+				color: aqua;
+			}
+			&.active {
 				color: aqua;
 			}
 		}
