--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import Norteks from "../assets/img/logo.svg";
+import Norteks from "../../assets/img/logo.svg";
 import { Image } from "astro:assets";
 ---
 
