--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -1,8 +1,8 @@
 ---
-import Norteks from "../assets/img/logo.svg";
-import instagram from "../assets/img/icons/instagram.svg";
-import telegram from "../assets/img/icons/telegram.svg";
-import whatsapp from "../assets/img/icons/whatsapp.svg";
+import Norteks from "../../assets/img/logo.svg";
+import instagram from "../../assets/img/icons/instagram.svg";
+import telegram from "../../assets/img/icons/telegram.svg";
+import whatsapp from "../../assets/img/icons/whatsapp.svg";
 import { Image } from "astro:assets";
 
 const currentPath = Astro.url.pathname;
@@ -16,7 +16,7 @@ const currentPath = Astro.url.pathname;
 		<div class="-links">
 			<a
 				href="/textile"
-				class={currentPath === "/textile/" ? "-link active" : "-link "}
+				class={currentPath === "/textile/"  || currentPath.includes("/collection")|| currentPath.includes("/product") ? "-link active" : "-link "}
 				>Коллекции</a
 			>
 			<a
@@ -31,7 +31,7 @@ const currentPath = Astro.url.pathname;
 			>
 			<a
 				href="/blog"
-				class={currentPath === "/blog/" ? "-link active" : "-link "}
+				class={ currentPath === "/blog/" || currentPath.includes("/post") ? "-link active" : "-link "}
 				>Блог</a
 			>
 		</div>
