--- a/src/pages/collection.astro
+++ b/src/pages/collection.astro
@@ -1,12 +1,12 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import HomeImage from "../assets/img/homeImage.jpg";
-import { Image } from "astro:assets";
 import Collections from "../components/Collections.jsx";
+import EmailBox from "../components/EmailBox.astro";
 ---
 
 <BaseLayout>
 	<div class="container">
 		<Collections client:only />
 	</div>
+	<EmailBox />
 </BaseLayout>
