--- a/src/main.css
+++ b/src/main.css
@@ -128,12 +128,19 @@ a {
 	flex-direction: column;
 	gap:36px;
 	width: 520px;
+	@media (max-width: 768px) {
+		width: 80%;
+		gap: 16px;
+	}
 	.-input {
 		padding: 0 36px;
 		border: 1px solid #d1d1d1;
 		background: #ffffff;
 		border-radius: 3px;
 		height: 50px;
+		@media (max-width: 768px) {
+			height: 40px;
+		}
 	}
 	.-button {
 		height: 50px;
