--- a/src/pages/textile.astro
+++ b/src/pages/textile.astro
@@ -3,10 +3,12 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import HomeImage from "../assets/img/homeImage.jpg";
 import { Image } from "astro:assets";
 import Categories from "../components/Categories.jsx";
+import EmailBox from "../components/EmailBox.astro";
 ---
 
 <BaseLayout>
 	<div class="container">
 		<Categories client:only />
 	</div>
+	<EmailBox />
 </BaseLayout>
