--- a/src/pages/collection.astro
+++ b/src/pages/collection.astro
@@ -6,7 +6,7 @@ import EmailBox from "../components/EmailBox.astro";
 
 <BaseLayout>
 	<div class="container">
-		<Collections client:only />
+		<Collections client:load />
 	</div>
 	<EmailBox />
 </BaseLayout>
