--- a/src/pages/post.astro
+++ b/src/pages/post.astro
@@ -4,5 +4,5 @@ import PostItem from "../components/PostItem.jsx";
 ---
 
 <BaseLayout>
-	<PostItem client:only />
+	<PostItem client:load />
 </BaseLayout>
