--- a/src/pages/product.astro
+++ b/src/pages/product.astro
@@ -5,6 +5,6 @@ import CollectionItem from "../components/CollectionItem.jsx";
 
 <BaseLayout>
 	<div class="container">
-		<CollectionItem client:only />
+		<CollectionItem client:load />
 	</div>
 </BaseLayout>
