--- a/src/pages/textile.astro
+++ b/src/pages/textile.astro
@@ -8,7 +8,7 @@ import EmailBox from "../components/EmailBox.astro";
 
 <BaseLayout>
 	<div class="container">
-		<Categories client:only />
+		<Categories client:load />
 	</div>
 	<EmailBox />
 </BaseLayout>
