--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,6 +5,6 @@ import BlogList from "../components/BlogList";
 
 <BaseLayout>
 	<div class="container">
-		<BlogList client:load />
+		<BlogList client:only />
 	</div>
 </BaseLayout>
