--- a/src/pages/furniture.astro
+++ b/src/pages/furniture.astro
@@ -6,7 +6,7 @@ import EmailBox from "../components/EmailBox.astro";
 
 <BaseLayout>
 	<div class="container">
-		<FurnitureList client:load />
+		<FurnitureList client:only />
 	</div>
 	<EmailBox />
 </BaseLayout>
