--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,10 +33,8 @@ import Norteks from "../assets/img/logo.svg";
 			Основная философия нашей компании: ткани — это не только элемент
 			интерьера, но и имидж, стиль и атрибут высокой моды
 		</div>
-		<!-- <div>{resultList}</div> -->
-		<Categories client:only />
 	</div>
-	<!-- <EmailBox /> -->
+	<Categories client:only showEmail={false}/>
 </BaseLayout>
 
 <style scoped>
