--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -9,115 +9,134 @@ const currentPath = Astro.url.pathname;
 ---
 
 <nav class="header">
-	<div class="-container">
-		<a href="/" class="-link">
-			<Image src={Norteks} alt="" />
-		</a>
-		<div class="-links">
-			<a
-				href="/textile"
-				class={currentPath === "/textile/"  || currentPath.includes("/collection")|| currentPath.includes("/product") ? "-link active" : "-link "}
-				>Коллекции</a
-			>
-			<a
-				href="/cleaning"
-				class={currentPath === "/cleaning/" ? "-link active" : "-link "}
-				>Как очистить ткань</a
-			>
-			<a
-				href="/furniture"
-				class={currentPath === "/furniture/" ? "-link active" : "-link "}
-				>Фурнитура</a
-			>
-			<a
-				href="/blog"
-				class={ currentPath === "/blog/" || currentPath.includes("/post") ? "-link active" : "-link "}
-				>Блог</a
-			>
+	<div class="-wrapper">
+		<div class="-container">
+			<a href="/" class="-link">
+				<Image src={Norteks} alt="" />
+			</a>
+			<div class="-links">
+				<a
+					href="/textile"
+					class={currentPath === "/textile/" ||
+					currentPath.includes("/collection") ||
+					currentPath.includes("/product")
+						? "-link active"
+						: "-link "}>Коллекции</a
+				>
+				<a
+					href="/cleaning"
+					class={currentPath === "/cleaning/"
+						? "-link active"
+						: "-link "}>Как очистить ткань</a
+				>
+				<a
+					href="/furniture"
+					class={currentPath === "/furniture/"
+						? "-link active"
+						: "-link "}>Фурнитура</a
+				>
+				<a
+					href="/blog"
+					class={currentPath === "/blog/" ||
+					currentPath.includes("/post")
+						? "-link active"
+						: "-link "}>Блог</a
+				>
+			</div>
 		</div>
-	</div>
-	<div class="-container">
-		<div class="-socials">
-			<a href="https://www.instagram.com/tknortex/">
-				<Image class="-img" src={instagram} alt="" />
-			</a>
-			<a href="https://t.me/tknortex">
-				<Image class="-img" src={telegram} alt="" />
-			</a>
+
+		<div class="-container">
+			<div class="-socials">
+				<a href="https://www.instagram.com/tknortex/">
+					<Image class="-img" src={instagram} alt="" />
+				</a>
+				<a href="https://t.me/tknortex">
+					<Image class="-img" src={telegram} alt="" />
+				</a>
 				<Image class="-img" src={whatsapp} alt="" />
-		</div>
-		<div class="-contacts">
-			<div class="-text">Дмитровское шоссе 71Б 7ONE</div>
-			<div class="-text">+7 (495) 221-33 - 16</div>
-			<div class="-text">+7 (903) 797 - 55 - 76</div>
+			</div>
+			<div class="-contacts">
+				<div class="-text">Дмитровское шоссе 71Б 7ONE</div>
+				<div class="-text">+7 (495) 221-33 - 16</div>
+				<div class="-text">+7 (903) 797 - 55 - 76</div>
+			</div>
 		</div>
 	</div>
 </nav>
 <style>
-.header {
-	background: #363636;
-	min-height: 90px;
-	width: 1fr;
-	padding: 10px 100px;
-	border: 0;
-	color: #fff;
-	display: flex;
-	/* align-items: center; */
-	justify-content: space-between;
-	flex-wrap: wrap;
-	gap: 10px;
-	@media (max-width: 1600px) {
-		padding: 0 10px;
-	}
-	.-logo {
-		cursor: pointer;
-	}
-	.-container {
-		display: flex;
-		align-items: center;
-		flex-wrap: wrap;
-
-		gap: 55px;
-	}
-	.-links {
-		display: flex;
-		gap: 60px;
-		flex-wrap: wrap;
-		@media (max-width: 768px) {
-			display: none;
-		}
-
-		.-link {
-			color: #fff;
-			font-size: 16px;
-			text-decoration: none;
-			&.active {
-				color: aqua;
-			}
-			&:hover {
-				color: aqua;
+	.header {
+		z-index: 10;
+		position: fixed;
+		top: 0;
+		background: #363636;
+		width: 100%;
+		border: 0;
+		color: #fff;
+		height: 90px;
+		.-wrapper {
+			padding: 0 100px;
+			display: flex;
+			width: 1fr;
+			height: 90px;
+			/* align-items: center; */
+			justify-content: space-between;
+			align-items: center;
+			flex-wrap: wrap;
+			gap: 10px;
+			@media (max-width: 1600px) {
+				padding: 0 10px;
 			}
 		}
-	}
-	.-socials {
-		display: flex;
-		gap: 24px;
-		.-img {
-			height: 24px;
-			width: auto;
+
+		.-container {
+			display: flex;
+			align-items: center;
+			flex-wrap: wrap;
+
+			gap: 55px;
+		}
+		.-logo {
 			cursor: pointer;
 		}
-	}
-	.-contacts {
-		display: flex;
-		gap: 8px;
-		flex-direction: column;
-		@media (max-width: 768px) {
-			display: none;
+		.-links {
+			display: flex;
+			gap: 60px;
+			flex-wrap: wrap;
+			@media (max-width: 768px) {
+				display: none;
+			}
+
+			.-link {
+				color: #fff;
+				font-size: 16px;
+				text-decoration: none;
+				&.active {
+					color: aqua;
+				}
+				&:hover {
+					color: aqua;
+				}
+			}
 		}
-		.-text {
-			font-size: 14px;
+		.-socials {
+			display: flex;
+			gap: 24px;
+			.-img {
+				height: 24px;
+				width: auto;
+				cursor: pointer;
+			}
+		}
+		.-contacts {
+			display: flex;
+			gap: 8px;
+			flex-direction: column;
+			@media (max-width: 768px) {
+				display: none;
+			}
+			.-text {
+				font-size: 14px;
+			}
 		}
 	}
-}
 </style>
