--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -45,8 +45,7 @@ body {
 	flex-direction: column;
 }
 #content {
-	/* margin-top: 80px; */
-	/* padding: 10px; */
+	margin-top: 90px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
