--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -96,10 +96,10 @@ const currentPath = Astro.url.pathname;
 			gap: 55px;
 		}
 		.-logo {
-			margin-top: 4px;
 			cursor: pointer;
-			height: 60px;
-			width: auto;
+			margin-top: 2px;
+			height: auto;
+			width: 120px;
 		}
 		.-links {
 			display: flex;
