--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Norteks from "../assets/img/logo.svg";
 			<button class="-button">Оставить заявку</button>
 		</div>
 	</div>
-	<div class="container">
+	<div class="container disable-bottom">
 		<div class="text xl">
 			НОРТЕКС - ЭТО СОВРЕМЕННАЯ КОМПАНИЯ, ОСНОВНОЙ ДЕЯТЕЛЬНОСТЬЮ КОТОРОЙ
 			ЯВЛЯЕТСЯ ПРОДАЖА МЕБЕЛЬНЫХ ТКАНЕЙ ОТ ВЕДУЩИХ МИРОВЫХ ПРОИЗВОДИТЕЛЕЙ.
@@ -33,73 +33,96 @@ import Norteks from "../assets/img/logo.svg";
 			Основная философия нашей компании: ткани — это не только элемент
 			интерьера, но и имидж, стиль и атрибут высокой моды
 		</div>
+		<div class="text s">
+			«В этом мире нет почти ничего, что бы кто-нибудь не смог бы сделать
+			немножко похуже и продать немножко подешевле, и люди,
+			ориентирующиеся только на цену, становятся заслуженной добычей
+			подобных дельцов.» ***
+		</div>
+		<div class="text s">
+			«Глупо платить слишком много, но еще хуже платить слишком мало. Если
+			вы платите слишком много, вы теряете какую-то сумму. И всё. Если же
+			вы платите слишком мало, то иногда вы теряете все, потому что
+			купленная вещь не может выполнить своей задачи.» ***
+		</div>
+		<div class="text s">
+			«Законы экономики не позволяют получить что-то ценное задёшево. Если
+			вы решаетесь в пользу самого дешевого предложения, вы должны
+			учитывать и риск, на который вы идёте. А если вы на него идете, то у
+			вас достаточно денег, чтобы заплатить и за что-нибудь получше». ***
+		</div>
+		<i> Джон Раскин (1819-1900) </i>
 	</div>
-	<Categories client:only showEmail={false}/>
+	<Categories client:only showEmail={false} />
 </BaseLayout>
 
 <style scoped>
-.text {
-	font-size: 20px;
-	line-height: 32px;
-	@media (max-width: 768px) {
-		line-height: 24px;
-		font-size: 14px;
-	}
-	&.xl {
-		font-size: 24px;
-		font-weight: 700;
+	.text {
+		font-size: 20px;
+		line-height: 32px;
 		@media (max-width: 768px) {
+			line-height: 24px;
+			font-size: 14px;
+		}
+		&.s {
 			font-size: 16px;
+			max-width: 1200px;
 		}
-	}
-}
-.home-image {
-	width: 100%;
-	display: flex;
-	justify-content: flex-start;
-	align-items: center;
-	height: 800px;
-	background-image: url("../assets/img/homeImage.jpg");
-	background-size: cover;
-	background-position: center;
-	@media (max-width: 768px) {
-		height: 500px;
-	}
-	.-container {
-		display: flex;
-		flex-direction: column;
-		gap: 24px;
-		margin-left: 60px;
-		max-width: 800px;
-		@media (max-width: 768px) {
-			margin-left: 20px;
-		}
-		.-title {
-			color: #fc7604;
-			font-size: 80px;
-			@media (max-width: 768px) {
-				font-size: 40px;
-			}
-		}
-		.-button {
-			border-radius: 40px;
-			width: 280px;
-			height: 60px;
-			background: #fc7604;
-			border: 0;
-			color: aliceblue;
+		&.xl {
 			font-size: 24px;
-			font-weight: 500;
+			font-weight: 700;
 			@media (max-width: 768px) {
 				font-size: 16px;
-				width: 200px;
-				height: 5dvb;
 			}
 		}
-		.-img {
-			width: 220px;
-			height: auto;
+	}
+	.home-image {
+		width: 100%;
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		height: 800px;
+		background-image: url("../assets/img/homeImage.jpg");
+		background-size: cover;
+		background-position: center;
+		@media (max-width: 768px) {
+			height: 500px;
+		}
+		.-container {
+			display: flex;
+			flex-direction: column;
+			gap: 24px;
+			margin-left: 60px;
+			max-width: 800px;
+			@media (max-width: 768px) {
+				margin-left: 20px;
+			}
+			.-title {
+				color: #fc7604;
+				font-size: 80px;
+				@media (max-width: 768px) {
+					font-size: 40px;
+				}
+			}
+			.-button {
+				border-radius: 40px;
+				width: 280px;
+				height: 60px;
+				background: #fc7604;
+				border: 0;
+				color: aliceblue;
+				font-size: 24px;
+				font-weight: 500;
+				@media (max-width: 768px) {
+					font-size: 16px;
+					width: 200px;
+					height: 5dvb;
+				}
+			}
+			.-img {
+				width: 220px;
+				height: auto;
+			}
 		}
 	}
-}
 </style>
