--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ import Norteks from "../assets/img/logo.svg";
 			<button class="-button">Оставить заявку</button>
 		</div>
 	</div>
+	<Categories client:only showEmail={false} />
 	<div class="container disable-bottom">
 		<div class="text xl">
 			НОРТЕКС - ЭТО СОВРЕМЕННАЯ КОМПАНИЯ, ОСНОВНОЙ ДЕЯТЕЛЬНОСТЬЮ КОТОРОЙ
@@ -37,23 +38,22 @@ import Norteks from "../assets/img/logo.svg";
 			«В этом мире нет почти ничего, что бы кто-нибудь не смог бы сделать
 			немножко похуже и продать немножко подешевле, и люди,
 			ориентирующиеся только на цену, становятся заслуженной добычей
-			подобных дельцов.» ***
+			подобных дельцов.»
 		</div>
 		<div class="text s">
 			«Глупо платить слишком много, но еще хуже платить слишком мало. Если
 			вы платите слишком много, вы теряете какую-то сумму. И всё. Если же
 			вы платите слишком мало, то иногда вы теряете все, потому что
-			купленная вещь не может выполнить своей задачи.» ***
+			купленная вещь не может выполнить своей задачи.»
 		</div>
 		<div class="text s">
 			«Законы экономики не позволяют получить что-то ценное задёшево. Если
 			вы решаетесь в пользу самого дешевого предложения, вы должны
 			учитывать и риск, на который вы идёте. А если вы на него идете, то у
-			вас достаточно денег, чтобы заплатить и за что-нибудь получше». ***
+			вас достаточно денег, чтобы заплатить и за что-нибудь получше».
 		</div>
 		<i> Джон Раскин (1819-1900) </i>
 	</div>
-	<Categories client:only showEmail={false} />
 </BaseLayout>
 
 <style scoped>
